[workspace]
members = ["crates/tlsplus", "crates/uniffi-bindgen"]
resolver = "3"

[workspace.package]
description = "Burp extension to evade TLS fingerprinting. Bypass WAF, spoof any browser. "
license = "MIT OR Apache-2.0"
repository = "https://github.com/nguyenthdat/burp-tls-plus"
version = "0.1.0"
edition = "2024"
authors = ["Dat Nguyen <nguynethdat@outlook.com>"]
keywords = ["tls", "burp", "ja3", "ja4", "fingerprint", "bypass", "waf", "spoof"]

[workspace.dependencies]
uniffi = { version = "0.30", features = ["bindgen", "tokio"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.7.0", features = ["full"] }
wreq = "5.3.0"
wreq-util = "2.2.6"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"
