[package]
name = "tlsplus"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib"]
name = "tlsplus"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-macros = "2.6.0"
uniffi = { workspace = true, features = ["bindgen", "tokio"] }
wreq = { workspace = true, features = ["apple-network-device-binding", "cookies-multiple", "cookies-preserve-order", "full", "hickory-dns", "http2-tracing", "internal_proxy_sys_no_cache", "multipart", "native-roots", "websocket"] }
